Conceptセクション

--- a/dou_yoroi/index.html
+++ b/dou_yoroi/index.html
@@ -40,6 +40,46 @@
         </div>
     </header>
 
+    <!--hero start-->
+    <section class="hero">
+        <h2 class="hero-title">Stylish Site</h2>
+    </section>
+    <!--hero end-->
+
+    <!--concept start-->
+    <section class="main-contents">
+        <section class="concept">
+            <div class="min-inner">
+                <h3 class="sec-title">Concept</h3>
+                <div class="concept-body">
+                    <div class="concept-img">
+                        <img src="./assets/images/main_01.jpg" alt="">
+                    </div>
+                    <div class="concept-text">
+                        <h4 class="sub-title">Fashionable girl</h4>
+                        <div class="concept-sentence">
+                            <p>アイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                            <p>書きくけお書きくけこ書きくけこ書きくけこ書きくけこ書きくけこアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                            <p>さしすせそさしすせそさしすせそさしすせそさしすせそさしすせそアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                            <p>たちつてとたちつてとたちつてとたちつてとたちつてとたちつてとアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                            <p>なにぬねのなにぬねのなにぬねのなにぬねのなにぬねのなにぬねのアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                            <p>は皮膚へほは皮膚へほは皮膚へへほは皮膚へほは皮膚へほは皮膚へほアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオアイウエオ</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--concept end-->
+
+        <!--application start-->
+        <section class="application">
+            <div class="full-width">
+                <h3 class="sec-title">Application</h3>
+            </div>
+        </section>
+        <!--application end-->
+    </section>
+    
     
     <!-- scriptエリア -->
     <!-- jquery cdn読み込み -->
