--- a/dou_yoroi/index.html
+++ b/dou_yoroi/index.html
@@ -73,8 +73,21 @@
 
         <!--application start-->
         <section class="application">
-            <div class="full-width">
-                <h3 class="sec-title">Application</h3>
+            <h3 class="sec-title">Application</h3>
+            <div class="full-inner">
+                <div class="app-body">
+                    <div class="app-img">
+                        <div class="app-img-bg"></div>
+                    </div>
+                    <div class="app-text">
+                        <div class="app-text-inner">   
+                            <h3 class="sub-title">Applicant</h3>
+                            <div class="app-sentence">
+                                <p>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめもやゆよ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!--application end-->
